[package]
name = "smithy_test_site"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.28", features = ["nightly"] }
smithy = { path = "../smithy/crates/smithy" }
web-sys = { version = "0.3.5", features = [
  "console",
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "Location",
] }
js-sys = "0.3.5"
futures = "0.1.25"
wasm-bindgen-futures = "0.3.5"

[replace]
"proc-macro2:0.4.24" = { path = "../smithy/crates/proc-macro2" }
